<resources>
    <string name="app_name">Tracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="view_tasks">View Tasks</string>
    <string name="add_new_task">Add New Task</string>
    <string name="test">Test OCR</string>
    <string name="opencv_scanning">OpenCV Scanning</string>
    <string name="settings">Settings</string>
    <string name="other">Other</string>
    <string name="new_task_title">New Task</string>
    <string name="enter_task_name">Enter Task Name</string>
    <string name="attach_document">Attach Document</string>
    <string name="done">done</string>
    <string name="edit_task">Edit Task</string>
    <string name="error_photo">An error occurred while making photo.</string>
    <string name="backup">Backup</string>
    <string name="upload_new_backup_to_google_drive">Upload new backup to Google Drive.</string>
    <string name="import_your_backup_data_from_google_drive_into_your_app">Import your backup data from Google Drive into your app.</string>
    <string name="backup_success_snackbar">Backup Successfully Uploaded.</string>
    <string name="import_success_snackbar">Backup Successfully Imported.</string>
    <string name="remove">Remove</string>
    <string name="remove_this_task">Remove this task?</string>
    <string name="close">Close</string>
    <string name="landing_empty_hint">Press + button to add new task or select some action using left drawer menu.</string>
    <string name="photo_hint">Take a photo of some document, connected with this task!</string>
    <string name="scan_hint">Scan some document and attach your document to the task as recognized text!</string>
    <string name="share">Share</string>
    <string name="share_text">Try Tracker app via this url: https://google.com</string>
    <string name="share_error">An Error Occurred, No Apps Available For Sharing</string>
    <string name="no_tasks_found_backup_error">No tasks found, create some tasks before backup.</string>
    <string name="no_tasks_found_import_error">No tasks found in backup folder, try again or choose valid folder.</string>
    <string name="text_processing">Text processing..</string>
    <string name="loading">Loading</string>
    <string name="no_text_recognized_error">No text found on the image, try again</string>
    <string name="language_changed">Language changed.</string>
    <string name="select_language_for_opencv_recognition">Select language for OpenCV recognition.</string>
    <string name="google_drive_login_message">You need to log in using Google Drive in order to use application.</string>
    <string name="sharing_message">Select app for sharing</string>
    <string name="recognition_in_progress_error">Wait till previous recognition is finished</string>
    <string name="results">Results</string>
    <string name="reset_image">Reset source</string>
    <string name="take_another_image">Take Another Image</string>
    <string name="en">EN</string>
    <string name="ru">RU</string>
    <string name="locale_us">en_US</string>
    <string name="locale_ru">ru_RU</string>
</resources>
