<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_view_tasks"
            android:icon="@drawable/ic_view_list_black_48dp"
            android:title="@string/view_tasks" />
        <item
            android:id="@+id/nav_add_task"
            android:icon="@drawable/ic_add_black_48dp"
            android:title="@string/add_new_task" />

    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_settings_black_48dp"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_backup"
                android:icon="@drawable/ic_backup_black_48dp"
                android:title="@string/backup" />
        </menu>
    </item>

</menu>
