<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/task_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:hint="@string/enter_task_name"
        android:imeOptions="actionNext"
        android:inputType="textAutoComplete"
        android:textColor="@color/white"
        android:textColorHint="@color/lightGrey" />

    <ImageView
        android:id="@+id/voice_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/task_name_edit"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        app:srcCompat="@drawable/ic_keyboard_voice_black_76dp" />

    <RadioGroup
        android:id="@+id/language_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/task_name_edit"
        android:layout_alignBaseline="@+id/voice_icon"
        android:layout_centerVertical="true"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_toStartOf="@+id/voice_icon">

        <RadioButton
            android:id="@+id/language_radio_button_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/en"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/language_radio_button_ru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ru"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RadioGroup>

</RelativeLayout>